# Graphics_engine

./: CMakeLists.txt  README
include/: glad.h  input.hpp  screen.hpp
shaders/: main.vect
src/: glad.c  input.cpp  main.cpp  screen.cpp
